...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: const MyAppBar(title: "Change password"),
      body: ResponsiveWrapper(
        child: Form(
          key: _formkey,
          child: Scrollbar(
            controller: PrimaryScrollController.of(context),
            child: ListView(
...
                const SizedBox(height: 40),
                FractionallySizedBox(
                  widthFactor: MediaQuery.of(context).size.width < 600
                      ? 1.0
                      : 700 / MediaQuery.of(context).size.width,
                  child: TextFormField(
                    key: const Key("currentP"),
                    controller: _currentPasswordController,
                    obscureText: _passwordInvisibleOld,
                    decoration: InputDecoration(
                      prefixIcon: const Icon(Icons.lock_open),
                      hintText: 'Current password',
                      border: const OutlineInputBorder(),
...
                      : 700 / MediaQuery.of(context).size.width,
                  child: SizedBox(
                    width: MediaQuery.of(context).size.width < 600
                        ? MediaQuery.of(context).size.width
                        : 700,
                    child: TextFormField(
                      key: const Key("newP"),
                      controller: _passwordController,
                      obscureText: _passwordInvisibleNew,
                      decoration: InputDecoration(
                        prefixIcon: const Icon(Icons.vpn_key_rounded),
                        hintText: 'New password',
                        border: const OutlineInputBorder(),
...
                const SizedBox(height: 20),
                FractionallySizedBox(
                  widthFactor: MediaQuery.of(context).size.width < 600
                      ? 1.0
                      : 700 / MediaQuery.of(context).size.width,
                  child: TextFormField(
                    key: const Key("newP2"),
                    obscureText: _passwordInvisibleNew,
                    decoration: InputDecoration(
                      prefixIcon: const Icon(Icons.vpn_key_rounded),
                      hintText: 'New password',
                      border: const OutlineInputBorder(),
                      labelText: 'Confirm new password',
...
                        } else {
                          // ignore: use_build_context_synchronously
                          _showInvalidDialog(context);
                        }
                      }
                    },
                    text: "Save",
                  ),
                ),
                Container(height: AppLayout.kPaddingFromCreate),
              ],
            ),
          ),
...

  void _showSuccessDialog(BuildContext context) {
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text('Password Change'),
        content: const Text('Your password has been changed successfully.'),
        actions: [
          TextButton(
            onPressed: () {
              Navigator.pop(context); // Close the dialog
            },
            child: const Text('OK'),
          ),
        ],
      ),
    );
  }

  void _showInvalidDialog(BuildContext context) {
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text('Password Change'),
        content: const Text('The password is not correct.'),
        actions: [
          TextButton(
            onPressed: () {
              Navigator.pop(context); // Close the dialog
            },
            child: const Text('OK'),
...
