...
                                    },
                                    style: ElevatedButton.styleFrom(
                                      padding: const EdgeInsets.symmetric(
                                          horizontal: 5),
                                    ),
                                    child: const Text(
                                      'Accept',
                                      style: TextStyle(
                                          fontWeight: FontWeight.bold),
                                    ),
                                  ),
                                  ElevatedButton(
                                    onPressed: () async {
...
              ),
              actions: [
                TextButton(
                  onPressed: () {
                    Navigator.pop(dialogContext);
                  },
                  child: const Text('Close'),
                ),
              ],
            );
          },
        );
      },
...
                      centerTitle: true,
                      backgroundColor:
                          Theme.of(context).appBarTheme.backgroundColor,
                      bottom: PreferredSize(
                        preferredSize: const Size.fromHeight(0),
                        child: TabBar(
                          tabs: ["My friends", "Explore"]
                              .map((e) => Tab(text: e))
                              .toList(),
                          controller: _tabController,
                          indicatorSize: TabBarIndicatorSize.tab,
                        ),
                      ),
...
