...
                : 700 / MediaQuery.of(context).size.width,
            child: ContainerShadow(
              child: Column(
                children: [
                  SwitchListTile(
                    title: const Text(
                      "Dark mode",
                    ),
                    value: Preferences.getBool('isDark'),
                    onChanged: (newValue) {
                      setState(() {
                        Provider.of<ThemeManager>(context, listen: false)
                            .toggleTheme(newValue);
                      });
                    },
                    secondary: const Icon(Icons.dark_mode_rounded),
                  ),
                  ListTile(
                    leading: const Icon(Icons.edit),
                    title: const Text("Edit profile"),
                    trailing: const Icon(Icons.navigate_next),
                    onTap: () async {
                      Widget newScreen = const EditProfileScreen();
                      Navigator.push(
                        context,
                        ScreenTransition(
...
